# coreascher

./: LICENSE  PRD.md  README.md  evaluation_result.json  pyproject.toml  run.py  scratchpad.md
data/literature/: papers.json
db/: chroma.sqlite3
examples/: run_literature_review.py
src/coreascher/: crew.py  main.py
src/coreascher.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/coreascher/agents/: phd_agent.py  postdoc_agent.py  professor_agent.py  reviewer_agent.py
src/coreascher/config/: agents.yaml  tasks.yaml
src/coreascher/tools/: custom_tool.py
tests/: conftest.py  test.py  testAPI.py  test_arxiv_tool.py  test_integration.py  test_phd_agent.py  test_postdoc_agent.py  test_professor_agent.py  test_reviewer_agent.py
